--- a/group.yml
+++ b/group.yml
@@ -129,7 +129,7 @@ metadata:
 spec:
   profile:
     displayName: Yasith Ranusha
-    email: yasith@cashvio.com
+    email: yasithranusha24@gmail.com
     picture: https://avatars.githubusercontent.com/yasithranusha
   memberOf:
     - team-cashvio
